[package]
name = "gtmpl_helpers"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
gtmpl = "0.5.7"
gtmpl_value = "0.3.3"

[dev-dependencies]
gtmpl_derive = "0.3.3"
