[package]
name = "gtmpl_helpers"
version = "0.1.1"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["go","lang","template","helpers"]
description = "A set of helper functions for the templates to work with gtmpl template system"
repository = "https://github.com/storyfeet/gtmpl_helpers" 
readme = "readme.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
gtmpl = "0.5.7"
gtmpl_value = "0.3.3"


